# BALM

./: .env.example  .gitignore  EXPERIMENTS.md  LICENSE  README.md  environment.yaml  pyproject.toml  requirements_cpu.txt  test.py  train.py
LeakyPDB/: LeakyPDB_data.ipynb
Target_expts/HIF2A/: HIF2A_Few-Shot_Merged_Data.csv  HIF2A_ZeroShot_Final.csv
Target_expts/MCL1/: MCL1_Comparision.ipynb
Target_expts/MPro/: GP_final_Mpro.csv  Mpro_FewShot.csv  Mpro_preds+GP.csv  Mpro_preds+GP_final.csv  Mpro_preds1.csv
Target_expts/SYK/: SYK_Few-Shot_Merged_Data.csv
Target_expts/USP7/: GP_Chemberta_USP7_fewShot.csv  GP_ECFP_USP7_fewShot.csv
balm/: Dockerfile  EIDF.md  __init__.py  common_utils.py  configs.py  dataset.py  factories.py  loss.py  model.py  tokenization.py  trainer.py
balm/datasets/: __init__.py  base_few_shot_dataset.py  bindingdb_filtered.py  cats.py  hif2a.py  hsp9.py  leaky_pdb.py  mcl1.py  mpro.py  syk.py  usp7.py  utils.py
balm/models/: balm.py  base_model.py  baseline.py  constants.py  utils.py
configs/accelerate/: deepspeed.yaml
configs/bindingdb_cold_drug/: esm_chemberta_baseline_1.yaml  esm_chemberta_baseline_3.yaml  esm_lokr_chemberta_loha_cosinemse_2.yaml  esm_lokr_chemberta_loha_cosinemse_3.yaml
configs/bindingdb_cold_target/: esm_chemberta_baseline_1.yaml  esm_chemberta_baseline_2.yaml  esm_chemberta_baseline_3.yaml  (+3 more)
data/: CATS.csv  Datasets.md  HSP9.csv  Mpro.csv  USP7.csv
data1/: CASP16_Autotaxin_data.csv  CASP16_CathepsinG_data.csv  CASP16_Chymase_data.csv  CASP16_Mpro_data.csv  KIT_data.csv  KIT_data1.csv  KIT_data_reg.csv  KIT_data_test.csv
default_configs/: balm_peft.yaml
dl_ba/: dataset.py  loss.py  metrics.py  model.py  tokenization.py  trainer.py
k8s_configs/: ablation_balm_peft_balanced_mse.yaml  ablation_balm_peft_dropout.yaml  ablation_balm_peft_relu_cosine.yaml  ablation_leakypdb_dropout.yaml  ablation_leakypdb_lr.yaml  al_mpro.yaml  balm_peft_final.yaml  bindingdb_cleaned.yaml  casp.yaml  extra_cats.yaml  extra_hsp90.yaml  extra_mpro_experiments.yaml  extra_usp7.yaml  hsp9.yaml  kinases.yaml  kit.yaml  leakypdb_test.yaml  leakypdb_upd.yaml  missing_exps.yaml  missing_mpro_experiments.yaml  mpro.yaml  new_usp7.yaml  rq1_balm.yaml  rq1_baselines.yaml  rq2_0_balm_peft_hpo.yaml  rq2_1_balm_peft.yaml  si_randomised_bindingdb.yaml  test_reverting.yaml  updated_mpro.yaml  usp7.yaml
scripts/: cluster_k8s_experiments.py  test.py  train.py  train_gp.py  train_gp.sh  train_gp_balm.sh
(+460 files in other folders)
